# edgin_around_rendering

./: Cargo.toml  Makefile  run.sh
.github/workflows/: build.yaml
edgin_around_android/: Cargo.toml
edgin_around_android/src/: about.rs  actor.rs  common.rs  consts.rs  elevation.rs  errors.rs  lib.rs  point.rs  preview_expositor.rs  scene.rs  world_expositor.rs
edgin_around_python/: Cargo.toml
edgin_around_python/src/: expositors.rs  game.rs  lib.rs  utils.rs
edgin_around_rendering/: Cargo.toml
edgin_around_rendering/shaders/: entities_fragment.glsl  entities_vertex.glsl  ground_fragment.glsl  ground_vertex.glsl
edgin_around_rendering/src/: animations.rs  expositors.rs  game.rs  lib.rs  renderers.rs  utils.rs
edgin_around_rendering/src/animations/: saml.rs  skeleton.rs  sprite.rs  stock.rs
edgin_around_rendering/src/expositors/: preview.rs  world.rs
edgin_around_rendering/src/game/: media.rs  scene.rs
edgin_around_rendering/src/renderers/: fixed.rs  polyhedron.rs  positioned.rs
edgin_around_rendering/src/utils/: coordinates.rs  defs.rs  errors.rs  figures.rs  geometry.rs  graphics.rs  ids.rs  tile.rs
edgin_around_rendering/tests/: scene.rs
pyi/: edgin_around_rendering.pyi
